--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "express-verify-hmac-signature",
   "version": "1.1.3",
   "description": "Express middleware for verifying HMAC-signed request body",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build:ejs": "npx tsc -p tsconfig.json",
+    "build:cjs": "npx tsc -p tsconfig-cjs.json",
+    "build": "npm run build:ejs && npm run build:cjs",
+    "prepare": "npm run build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/neeler/express-verify-hmac-signature.git"
@@ -20,12 +32,18 @@
     "url": "https://github.com/neeler/express-verify-hmac-signature/issues"
   },
   "homepage": "https://github.com/neeler/express-verify-hmac-signature#readme",
-  "dependencies": {},
-  "prettier": {
-    "singleQuote": true,
-    "tabWidth": 4
-  },
   "devDependencies": {
-    "prettier": "^1.15.3"
+    "@tsconfig/node14": "^1.0.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/express": "^4.17.15",
+    "@types/node": "18.11.15",
+    "eslint": "8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.8.1",
+    "typescript": "4.9.4"
+  },
+  "volta": {
+    "node": "18.12.1",
+    "npm": "8.19.2"
   }
 }
